All API's are now updated with their correct code
